Red Moving Square + Keybinds
Keybinds managements not fully working yet

--- a/BomberKnight.cbp
+++ b/BomberKnight.cbp
@@ -48,6 +48,14 @@
 			<Add library="dxguid" />
 			<Add directory="C:/SFML-2.5.1/lib" />
 		</Linker>
+		<Unit filename="Entity.cpp" />
+		<Unit filename="Entity.h" />
+		<Unit filename="Game.cpp" />
+		<Unit filename="Game.h" />
+		<Unit filename="GameState.cpp" />
+		<Unit filename="GameState.h" />
+		<Unit filename="State.cpp" />
+		<Unit filename="State.h" />
 		<Unit filename="cb.bmp" />
 		<Unit filename="main.cpp" />
 		<Extensions>
